# One

./: .gitignore  00_START_HERE.md  ARCHITECTURE.md  CHEATSHEET.md  CLEAN_CODE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DOCS_INDEX.md  GITHUB_README.md  PROJECT_SUMMARY.py  QUICKSTART.md  README.md  SETUP_SUMMARY.md  STARTUP.md  TESTING_GUIDE.md  docker-compose.yml  package.json  setup.bat  setup.sh
.github/workflows/: deploy.yml
backend/: Dockerfile  auth.py  create_tables.py  database.py  main.py  main_clean.py  models.py  pyproject.toml  requirements.txt  schemas.py  setup.cfg  view_database.py
frontend/: app.js  app_clean.js  index.html  netlify.toml  styles.css
